Fixed whitespace issue

--- a/econ-learning/src/components/modulePages.css
+++ b/econ-learning/src/components/modulePages.css
@@ -18,6 +18,7 @@
     /* letter-spacing: 0.01cm;
     word-spacing: 0.01cm; */
     line-height: 1.5cm;
+    white-space: pre-line;
 }
 
 .title {
